# Sagittar

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Sagittar.make  clang-toolchain.cmake  premake5.lua
.github/workflows/: build.yml  unit-test.yml
cmake/: clang-toolchain.cmake
openbench/: Makefile
src/: arch.h  board.cpp  board.h  containers.h  engine.cpp  engine.h  eval.cpp  eval.h  fen.cpp  fen.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  movepicker.cpp  movepicker.h  params.cpp  params.h  pch.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  searchtypes.h  timeman.cpp  timeman.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  utils.cpp  utils.h
src/commons/: containers.h  pch.cpp  pch.h  threadpool.h  types.h  utils.cpp  utils.h
src/comms/: uci.cpp  uci.h
src/core/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  board.cpp  board.h  defs.h  move.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  tt.cpp  tt.h  types.h  utils.cpp  utils.h
src/datagen/: datagen.cpp  datagen.h
src/eval/hce/: defs.h  eval.cpp  eval.h
src/eval/hce/tuner/: base.h  tuner.cpp  tuner.h
src/sagittar/: engine.cpp  engine.h  main.cpp
src/sagittar/comms/: uci.cpp  uci.h
src/sagittar/core/: board.cpp  board.h  fen.cpp  fen.h  move.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  types.h
src/sagittar/eval/hce/: eval.cpp  eval.h  types.h
src/sagittar/search/: constants.h  data.h  movepicker.cpp  movepicker.h  params.cpp  params.h  search.cpp  search.h  timeman.cpp  timeman.h  tt.cpp  tt.h  types.h
src/sagittar/utils/: utils.cpp  utils.h
src/search/: history.h  movepicker.cpp  movepicker.h  params.cpp  params.h  search.cpp  search.h  searchtypes.h  timeman.cpp  timeman.h  tt.cpp  tt.h  types.h
test/: test_bitboard.cpp  test_board.cpp  test_eval.cpp  test_fen.cpp  test_main.cpp  test_move.cpp  test_movegen.cpp  test_movepicker.cpp  test_params.cpp  test_perft.cpp  test_position.cpp  test_tt.cpp  test_utils.cpp
